--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -13,21 +13,21 @@
           </a>
 
           <button class="btn btn-sm btn-outline-danger"
-            [ngClass]="{disabled: isDeleting}"
-            (click)="deleteArticle()">
+                  [ngClass]="{disabled: isDeleting}"
+                  (click)="deleteArticle()">
             <i class="ion-trash-a"></i> Delete Article
           </button>
         </span>
 
         <span [hidden]="canModify">
           <app-follow-button
-            [profile]="article.author"
-            (toggle)="onToggleFollowing($event)">
+              [profile]="article.author"
+              (toggle)="onToggleFollowing($event)">
           </app-follow-button>
 
           <app-favorite-button
-            [article]="article"
-            (toggle)="onToggleFavorite($event)">
+              [article]="article"
+              (toggle)="onToggleFavorite($event)">
             {{ article.favorited ? 'Unfavorite' : 'Favorite' }} Article <span class="counter">({{ article.favoritesCount }})</span>
           </app-favorite-button>
         </span>
@@ -45,7 +45,7 @@
 
         <ul class="tag-list">
           <li *ngFor="let tag of article.tagList"
-            class="tag-default tag-pill tag-outline">
+              class="tag-default tag-pill tag-outline">
             {{ tag }}
           </li>
         </ul>
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-    <hr />
+    <hr/>
 
     <div class="article-actions">
       <app-article-meta [article]="article">
@@ -65,21 +65,21 @@
           </a>
 
           <button class="btn btn-sm btn-outline-danger"
-            [ngClass]="{disabled: isDeleting}"
-            (click)="deleteArticle()">
+                  [ngClass]="{disabled: isDeleting}"
+                  (click)="deleteArticle()">
             <i class="ion-trash-a"></i> Delete Article
           </button>
         </span>
 
         <span [hidden]="canModify">
           <app-follow-button
-            [profile]="article.author"
-            (toggle)="onToggleFollowing($event)">
+              [profile]="article.author"
+              (toggle)="onToggleFollowing($event)">
           </app-follow-button>
 
           <app-favorite-button
-            [article]="article"
-            (toggle)="onToggleFavorite($event)">
+              [article]="article"
+              (toggle)="onToggleFavorite($event)">
             {{ article.favorited ? 'Unfavorite' : 'Favorite' }} Article <span class="counter">({{ article.favoritesCount }})</span>
           </app-favorite-button>
         </span>
@@ -96,15 +96,15 @@
             <fieldset [disabled]="isSubmitting">
               <div class="card-block">
                 <textarea class="form-control"
-                  placeholder="Write a comment..."
-                  rows="3"
-                  [formControl]="commentControl"
+                          placeholder="Write a comment..."
+                          rows="3"
+                          [formControl]="commentControl"
                 ></textarea>
               </div>
               <div class="card-footer">
-                <img [src]="currentUser.image" class="comment-author-img" />
+                <img [src]="currentUser.image" class="comment-author-img"/>
                 <button class="btn btn-sm btn-primary" type="submit">
-                 Post Comment
+                  Post Comment
                 </button>
               </div>
             </fieldset>
@@ -112,13 +112,14 @@
         </div>
 
         <div *appShowAuthed="false">
-          <a [routerLink]="['/login']">Sign in</a> or <a [routerLink]="['/register']">sign up</a> to add comments on this article.
+          <a [routerLink]="['/login']">Sign in</a> or <a [routerLink]="['/register']">sign up</a> to add comments on
+          this article.
         </div>
 
         <app-article-comment
-          *ngFor="let comment of comments"
-          [comment]="comment"
-          (deleteComment)="onDeleteComment(comment)">
+            *ngFor="let comment of comments"
+            [comment]="comment"
+            (deleteComment)="onDeleteComment(comment)">
         </app-article-comment>
 
       </div>
