PBC-419: Codacy PBC-419_testCodacy

--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,5 +1,5 @@
 <div class="article-page">
-
+  <h1>TEST</h1>
     <div class="banner">
         <div class="container">
             <h1>{{ article.title }}</h1>
