PBC-419: Test Codacy Changes This reverts commit b7ecc83e

--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,5 +1,8 @@
 <div class="article-page">
   <h1>TEST</h1>
+  <h1>TEST11</h1>
+  <h1>TEST12</h1>
+  <h1>TEST13</h1>
     <div class="banner">
         <div class="container">
             <h1>{{ article.title }}</h1>
